--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 <header>
     <h1>Lämpötilamuunnin</h1>
-    <select>
-        <option value="">Celsius -> Fahrenheit</option>
+    <select id="conversion">
+        <option value="celsius">Celsius -> Fahrenheit</option>
+        <option value="fahrenheit">Fahrenheit -> Celsius</option>
     </select>
 </header>
 <main>
